# mcompiler

./: CMakeLists.txt  README.md  assemble.out  buffer.c  buffer.h  codegen.c  codegen.h  dbuffer.h  disassemble_fragment  dominators.c  dominators.h  dot_builder.c  dot_builder.h  elf.h  format.c  format.h  hashmap.c  hashmap.h  ir.c  ir.h  ir_creation.c  ir_creation.h  list.c  list.h  main.c  parser.c  parser.h  platform_utils.c  platform_utils.h  programming_without.txt  relocation.c  relocation.h  ssa_conversion.c  ssa_conversion.h  ssa_convertion.c  ssa_convertion.h  test.out  utils.c  utils.h  x86_64.h  (+5 more)
tests/: CMakeLists.txt  ast_codegen.c  ast_dump.c  cfg_test.c  codegen_test.c  format_test.c  hashmap_test.c  ir_conversion.c  ir_test.c  parser_test.c  relocation_test.c  ssa_test.c  zone_alloc_test.c
