include_directories(PRIVATE ../)

add_executable(relocation_test relocation_test.c ../relocation.c ../buffer.c ../utils.c)
add_executable(hashmap_test hashmap_test.c ../zone_alloc.c ../hashmap.c ../buffer.c ../list.c ../utils.c)
add_executable(format_test format_test.c ../format.c ../buffer.c ../utils.c)
add_executable(tokenizer_test parser_test.c ../buffer.c ../format.c ../parser.c ../utils.c)
add_executable(ast_dump ast_dump.c ../buffer.c ../format.c ../parser.c ../utils.c)
add_executable(ir_test ir_test.c ../dominators.c  ../buffer.c ../format.c ../ir.c ../list.c ../hashmap.c ../zone_alloc ../utils.c)
add_executable(codegen_test codegen_test.c ../platform_utils.c ../format.c ../list.c ../codegen.c ../relocation.c ../x86_64_assembly.c ../buffer.c ../parser.c ../utils.c )
add_executable(zone_test zone_alloc_test.c ../zone_alloc.c ../utils.c)
add_executable(cfg_test cfg_test.c ../buffer.c ../dominators.c ../format.c ../ir.c ../list.c ../hashmap.c ../zone_alloc ../utils.c)
